src/yini_test/cases/golden/strict/valid/numbers/hexadecimal-hex-prefix.strict.yini
@yini strict

^ Numbers
color = hex:FF_AA_00
mask = hex:0F

/END
