src/yini_test/cases/golden/strict/invalid/numbers/malformed-hex.strict.yini
@yini strict

^ Numbers
value = 0xGG

/END
